--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,7 @@
         android:theme="@style/AppTheme"
         android:hardwareAccelerated="true">
         <activity android:name=".ScanBarCode"></activity>
+        <activity android:name=".ScanResultActivity"/>
         <activity android:name=".U1" />
         <activity android:name=".R2" />
         <activity android:name=".R3" />
