--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,7 +5,15 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.RECORD_AUDIO" />
 
-    <application
+
+<!--    텍스트인식 카메라 선언.-->
+    <uses-feature android:name="android.hardware.camera"
+        android:required="true" />
+
+
+
+
+<application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -18,14 +26,22 @@
         <activity android:name=".U1" />
         <activity android:name=".R2" />
         <activity android:name=".R3" />
+
         <activity android:name=".R1" />
         <activity android:name=".MainActivity">
+
+            <meta-data
+                android:name="com.google.firebase.ml.vision.DEPENDENCIES"
+                android:value="ocr" />
+
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+
     </application>
 
 </manifest>
