--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,9 +25,8 @@
         <activity android:name=".ScanResultActivity"/>
         <activity android:name=".U1" />
         <activity android:name=".R2" />
-        <activity android:name=".R3" />
-
-
+        <activity android:name="R3"/>
+        <activity android:name=".R3_function" />
         <activity android:name=".R1" />
         <activity android:name=".MainActivity">
 
